<resources>
    <string name="app_name">FilmingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FilmingApp</string>
    <string name="nav_header_subtitle">Series y Películas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="titulo">Titulo</string>

    <string name="descripcion">En esta app, vamos a hablar sobre la sinopsis, el reparto y los directores de las mejores películas y series del momento</string>

    <string name="director">Director</string>
    <string name="reparto">Reparto</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="temporadas">Temporadas</string>

    <string name="menu_home">Home</string>
    <string name="menu_cine">Cine</string>
    <string name="menu_series">Series</string>
</resources>